# rust_opencr

./: Cargo.toml  LICENSE  README.md  memory.x  openocd.cfg
examples/: blink_led.rs
src/: led.rs  main.rs
