[package]
authors = ["Eavae <lijingyu68@gmail.com>"]
name = "opencr_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
# cortex-m = "0.6.2"
# cortex-m-rt = "0.6.12"
# panic-itm = "0.4.1"
# cortex-m-semihosting = "0.3.5"
# panic-halt = "0.2.0"

cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"
nb = "0.1.3"
# stm32f30x-hal = "0.2.0"

[dependencies.stm32f7xx-hal]
version = "0.2.0"
features = ["stm32f746", "rt"]
